Refactored using TreeMap